...
        >
          <View style={styles.calorieBlock}>
            <ThemedText
              type="caption"
              style={{ color: theme.textSecondary, textAlign: "center" }}
            >
              Current
            </ThemedText>
            <ThemedText type="h4" style={styles.calorieValue}>
              {recommendation.previousCalories}
            </ThemedText>
            <ThemedText
              type="caption"
...
